DXE-2234 Add Release Notes into draft release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ name: goreleaser
 on:
   push:
     tags:
-      - 'v*'
+      - 'test*'
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -33,6 +33,19 @@ jobs:
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
+      - name: Get changelog
+        run: |
+          echo 'CHANGELOG_BODY<<EOF' >> $GITHUB_ENV
+          awk '/## ([0-9]+\.?)+/{n++}; n==1; n==2{exit}' CHANGELOG.md >> $GITHUB_ENV
+          echo 'EOF'>> $GITHUB_ENV
+      - name: Publish Release Notes
+        uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag: ${{ github.ref_name }}
+          name: "${{ github.ref_name }}"
+          footer: "${{ env.CHANGELOG_BODY }}"
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
